syntax = "proto3";

package proto.xrfq3.v1;

option go_package = "xrf197ilz35aq/gen/proto/xrf-q3/v1";

service AppService {
  rpc CheckHealth(CheckHealthRequest) returns (CheckHealthResponse);
}

message CheckHealthResponse {
  bool is_up = 1;
  string app_id = 2;
  string region = 3;
}

message CheckHealthRequest {}
